Fixed Horizontal Scrollbar Width Bug

--- a/src/components/SkillsSection/SkillsSection.scss
+++ b/src/components/SkillsSection/SkillsSection.scss
@@ -119,7 +119,7 @@ $floatAnimationDuration: 3s;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
 
   /* Other */
